--- a/frontend/public/assets/css/estilo.css
+++ b/frontend/public/assets/css/estilo.css
@@ -10,19 +10,19 @@
 
 /* Paleta de Cores Natalina */
 :root {
-    --vermelho: #fa5671;
-    --branco: #FCFAEE;
+    --vermelho: #9ac7db;
+    --branco: #000000;
     --azul-medio: #507687;
-    --azul-escuro: #384B70;
+    --azul-escuro: #e9eaee;
     --preto: #2c2c2e;
 }
 
 /* Geral */
 body {
-    font-family: 'Poppins', sans-serif; /* Fonte padrão */
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; /* Fonte padrão */
     font-size: 16px; /* Tamanho base da fonte */
     color: var(--azul-escuro); /* Cor padrão do texto */
-    background-color: var(--branco); /* Fundo branco */
+    background: linear-gradient(#05555f,#29a09c,#14686e, #083836);/* Fundo branco */
     line-height: 1.6; /* Altura de linha */
 }
 
@@ -32,17 +32,17 @@ a {
     text-decoration: none;
 }
 a:hover {
-    color: var(--vermelho); /* Vermelho no hover */
+    color: var(--green); /* Vermelho no hover */
 }
 
 /* Cabeçalhos */
 h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
-    color: var(--azul-escuro); /* Azul escuro para títulos */
+    background: linear-gradient(#29a09c,#14686e); /* Azul escuro para títulos */
     margin-bottom: 15px;
 }
 h2 {
-    color: var(--azul-medio); /* Azul médio para subtítulos */
+    color: var(--branco); /* Azul médio para subtítulos */
 }
 
 /* Parágrafos */
@@ -65,7 +65,7 @@ button {
     font-size: 16px;
     background-color: var(--vermelho); /* Fundo vermelho */
     color: var(--branco); /* Texto branco */
-    border: none;
+    border: 15px;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -76,7 +76,7 @@ button:hover {
 
 /* Navegação */
 .navbar {
-    background-color: var(--preto); /* Fundo preto */
+    background-color: var(#05555f); /* Fundo preto */
 }
 .navbar .nav-link:hover {
     color: var(--vermelho); /* Links brancos */
@@ -87,7 +87,7 @@ button:hover {
     margin-right: 15px;
 }
 .navbar .dropdown-menu {
-    background-color: var(--preto); /* Fundo do dropdown em azul médio */
+    background-color: var(--branco); /* Fundo do dropdown em azul médio */
 }
 .navbar .dropdown-item {
     color: var(--branco); /* Texto branco no dropdown */
@@ -99,8 +99,8 @@ button:hover {
 
 /* Rodapé */
 .footer {
-    background-color: var(--preto); /* Fundo preto */
-    color: var(--branco); /* Texto branco */
+    background-color: white; /* Fundo preto */
+    background-color: #083836; /* Texto branco */
     padding: 20px;
     text-align: center;
 }
@@ -124,4 +124,5 @@ button:hover {
 .mt-3 { margin-top: 1rem; }
 .mb-3 { margin-bottom: 1rem; }
 .pt-3 { padding-top: 1rem; }
-.pb-3 { padding-bottom: 1rem; }
+.pb-3 { padding-bottom: 1rem; 
+}
